@@ -153,6 +153,7 @@ int Atari800_nframes = 0;
 int Atari800_refresh_rate = 1;
 int Atari800_collisions_in_skipped_frames = FALSE;
 int Atari800_turbo = FALSE;
+int Atari800_auto_frameskip = FALSE;
 
 #ifdef BENCHMARK
 static double benchmark_start_time;
@@ -1006,11 +1007,52 @@ static void Atari_sleep(double s)
 
 #endif /* PS2 */
 
+static void autoframeskip(double curtime, double lasttime)
+{
+	static int afs_lastframe = 0, afs_discard = 0;
+	static double afs_lasttime = 0.0, afs_sleeptime = 0.0;
+	double afs_speedpct, afs_sleeppct, afs_ataritime, afs_realtime;
+
+	if (lasttime - curtime > 0)
+		afs_sleeptime += lasttime - curtime;
+	if (curtime - afs_lasttime > 0.5) {
+		afs_ataritime = ((double) (Atari800_nframes - afs_lastframe)) /
+						((double) (Atari800_tv_mode == Atari800_TV_PAL ? 50 : 60));
+		afs_realtime = curtime - afs_lasttime;
+		afs_speedpct = 100.0 * afs_ataritime / afs_realtime;
+		afs_sleeppct = 100.0 * afs_sleeptime / afs_realtime;
+		/*Log_print("AFS: Speed %.2f%% - Slept %.2f%%", afs_speedpct, afs_sleeppct);*/
+
+		if (afs_discard < 3 && (afs_realtime > 2.0 * afs_ataritime)) {
+			afs_discard++;
+			/*Log_print("AFS: Discard sample %d", afs_discard);*/
+		} else {
+			afs_discard = 0;
+			if (afs_speedpct < 90.0) {
+				if (Atari800_refresh_rate < 4) {
+					Atari800_refresh_rate++;
+					Log_print("AFS: Increment frameskip to %d", Atari800_refresh_rate);
+				}
+			} else {
+				if (afs_sleeppct > 20.0 && Atari800_refresh_rate > 1) {
+					Atari800_refresh_rate--;
+					Log_print("AFS: Decrement frameskip to %d", Atari800_refresh_rate);
+				}
+			}
+		}
+
+		afs_sleeptime = 0.0;
+		afs_lastframe = Atari800_nframes;
+		afs_lasttime = Atari_time();
+	}
+}
+
 void Atari800_Sync(void)
 {
 	static double lasttime = 0;
 	double deltatime = 1.0 / ((Atari800_tv_mode == Atari800_TV_PAL) ? Atari800_FPS_PAL : Atari800_FPS_NTSC);
 	double curtime;
+
 #ifdef SYNCHRONIZED_SOUND
 	deltatime *= PLATFORM_AdjustSpeed();
 #endif
@@ -1019,10 +1061,13 @@ void Atari800_Sync(void)
 		deltatime *= Atari800_refresh_rate;
 #endif
 	lasttime += deltatime;
+	curtime = Atari_time();
+	if (Atari800_auto_frameskip)
+		autoframeskip(curtime, lasttime);
 #ifdef SUPPORTS_PLATFORM_SLEEP
-	PLATFORM_Sleep(lasttime - Atari_time());
+	PLATFORM_Sleep(lasttime - curtime);
 #else
-	Atari_sleep(lasttime - Atari_time());
+	Atari_sleep(lasttime - curtime);
 #endif
 	curtime = Atari_time();
 
